--- a/MSVC/RavlChartDetector.vcproj
+++ b/MSVC/RavlChartDetector.vcproj
@@ -3,8 +3,8 @@
 	ProjectType="Visual C++"
 	Version="8.00"
 	Name="RavlChartDetector"
-	ProjectGUID="{BB713C2A-7D2D-47F0-92AD-3A8527D67E59}"
-	RootNamespace="RavlChartDetector"
+	ProjectGUID="{bb713c2a-7d2d-47f0-92ad-3a8527d67e59}"
+        RootNamespace="RavlChartDetector"
 	Keyword="win32Proj"
 	>
 	<Platforms>
@@ -24,7 +24,10 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.ps C:\Build\share\RAVL\pixmaps\CalibrationChart.ps&#x0D;&#x0A;if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.jpg C:\Build\share\RAVL\pixmaps\CalibrationChart.jpg&#x0D;&#x0A;if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.coords C:\Build\share\RAVL\pixmaps\CalibrationChart.coords&#x0D;&#x0A;"
+				CommandLine="
+if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.ps C:\Build\share\RAVL\pixmaps\CalibrationChart.ps&#x0D;&#x0A;
+if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.png C:\Build\share\RAVL\pixmaps\CalibrationChart.png&#x0D;&#x0A;
+if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.coords C:\Build\share\RAVL\pixmaps\CalibrationChart.coords&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -102,7 +105,10 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.ps C:\Build\share\RAVL\pixmaps\CalibrationChart.ps&#x0D;&#x0A;if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.jpg C:\Build\share\RAVL\pixmaps\CalibrationChart.jpg&#x0D;&#x0A;if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.coords C:\Build\share\RAVL\pixmaps\CalibrationChart.coords&#x0D;&#x0A;"
+				CommandLine="
+if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.ps C:\Build\share\RAVL\pixmaps\CalibrationChart.ps&#x0D;&#x0A;
+if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.png C:\Build\share\RAVL\pixmaps\CalibrationChart.png&#x0D;&#x0A;
+if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#x0D;&#x0A;copy ..\.\Image\Processing\ChartDetector\CalibrationChart.coords C:\Build\share\RAVL\pixmaps\CalibrationChart.coords&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -131,8 +137,8 @@
 				ObjectFile="C:\Build\win32\opt\obj\RavlChartDetector\"
 				ProgramDataBaseFileName="C:\Build\win32\opt\obj\RavlChartDetector\"
 				WarningLevel="3"
-				SuppressStartupBanner="true"
 				Detect64BitPortabilityProblems="false"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -168,6 +174,7 @@
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
+	
 	</Configurations>
 	<References>
 	</References>
@@ -176,6 +183,7 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
+			
 			<File
 				RelativePath="..\.\Image\Processing\ChartDetector\ChartDetector.cc"
 				>
@@ -197,6 +205,7 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
+                        
 			<File
 				RelativePath="..\.\Image\Processing\ChartDetector\ChartDetector.hh"
 				>
