--- a/MSVC/RavlPythonSwig.vcproj
+++ b/MSVC/RavlPythonSwig.vcproj
@@ -3,8 +3,8 @@
 	ProjectType="Visual C++"
 	Version="8.00"
 	Name="RavlPythonSwig"
-	ProjectGUID="{9FD175B7-204F-46A0-BBC1-7498394F8509}"
-	RootNamespace="RavlPythonSwig"
+	ProjectGUID="{9fd175b7-204f-46a0-bbc1-7498394f8509}"
+        RootNamespace="RavlPythonSwig"
 	Keyword="win32Proj"
 	>
 	<Platforms>
@@ -24,7 +24,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="if not exist C:\Build\\share\Python\NUL mkdir C:\Build\\share\Python&#x0D;&#x0A;copy ..\.\Contrib\Swig\Ravl.py C:\Build\\share\Python\Ravl.py&#x0D;&#x0A;"
+				CommandLine="
+if not exist C:\Build\\share\Python\NUL mkdir C:\Build\\share\Python&#x0D;&#x0A;copy ..\.\Contrib\Swig\Ravl.py C:\Build\\share\Python\Ravl.py&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -102,7 +103,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="if not exist C:\Build\\share\Python\NUL mkdir C:\Build\\share\Python&#x0D;&#x0A;copy ..\.\Contrib\Swig\Ravl.py C:\Build\\share\Python\Ravl.py&#x0D;&#x0A;"
+				CommandLine="
+if not exist C:\Build\\share\Python\NUL mkdir C:\Build\\share\Python&#x0D;&#x0A;copy ..\.\Contrib\Swig\Ravl.py C:\Build\\share\Python\Ravl.py&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -131,8 +133,8 @@
 				ObjectFile="C:\Build\win32\opt\obj\RavlPythonSwig\"
 				ProgramDataBaseFileName="C:\Build\win32\opt\obj\RavlPythonSwig\"
 				WarningLevel="3"
-				SuppressStartupBanner="true"
 				Detect64BitPortabilityProblems="false"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -168,6 +170,7 @@
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
+	
 	</Configurations>
 	<References>
 	</References>
@@ -176,6 +179,7 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
+			
 			<File
 				RelativePath="..\.\Contrib\Swig\Ravl.i"
 				>
@@ -185,48 +189,9 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
+                        
 			<File
-				RelativePath="..\.\Contrib\Swig\Affine2d.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Array2d.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Date.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\DList.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Font.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Hash.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Image.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Index.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Index2d.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\IndexRange2d.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\IO.i"
+				RelativePath="..\.\Contrib\Swig\Types.i"
 				>
 			</File>
 			<File
@@ -234,11 +199,59 @@
 				>
 			</File>
 			<File
-				RelativePath="..\.\Contrib\Swig\PointSet2d.i"
+				RelativePath="..\.\Contrib\Swig\Polygon2d.i"
 				>
 			</File>
 			<File
-				RelativePath="..\.\Contrib\Swig\Polygon2d.i"
+				RelativePath="..\.\Contrib\Swig\Image.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\IndexRange2d.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\Index2d.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\Array2d.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\Index.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\String.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\IO.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\Font.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\SArray1d.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\Affine2d.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\DList.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\Date.i"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Contrib\Swig\PointSet2d.i"
 				>
 			</File>
 			<File
@@ -250,15 +263,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\.\Contrib\Swig\SArray1d.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\String.i"
-				>
-			</File>
-			<File
-				RelativePath="..\.\Contrib\Swig\Types.i"
+				RelativePath="..\.\Contrib\Swig\Hash.i"
 				>
 			</File>
 		</Filter>
